update HomeHeader & add Login base structure

--- a/frontend/src/Components/Headers/HomeHeader.css
+++ b/frontend/src/Components/Headers/HomeHeader.css
@@ -1,23 +1,34 @@
-#homeHeader {
+.homeHeader {
     height: 48vh;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    position: relative;
 }
 
-#homeHeader h1 {
+.homeHeader h1 {
     font-size: 2.5em;
     color: #0C5D7B;
 }
 
-#homeImgContainer {
+.authTitle {
+    position: absolute;
+    z-index: 1;
+    bottom: 12vh;
+}
+
+.homeImgContainer {
     height: auto;
     width: 100vw;
 }
 
-#homeImg {
+.homeImg {
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+.authImg {
+    opacity: 0.3;
 }
