add login component base structure

--- a/frontend/src/Components/Headers/HomeHeader.css
+++ b/frontend/src/Components/Headers/HomeHeader.css
@@ -4,6 +4,9 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+}
+
+.authHeader{
     position: relative;
 }
 
